Refatorando restante dos repositorios para Db e Criando a nova migration, Documentação Atualizada
