# src/routes/categories.routes.ts
@@ -1,26 +1,23 @@
 import { request, Router } from "express";
 import multer from "multer"
-import createCategoryController  from "../modules/cars/useCases/createCategory";
-import { importCategoryController } from "../modules/cars/useCases/importCategory";
-import { listCategoriesControllers } from "../modules/cars/useCases/listCategories";
+import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController";
+import { ImportCategoryController } from "../modules/cars/useCases/importCategory/ImportCategoryController";
+import { ListCategoriesController } from "../modules/cars/useCases/listCategories/ListCategoriesController";
 
 const categoriesRoutes = Router()
 const upload = multer({
     dest:"./tmp"
 });
 
-categoriesRoutes.post("/", (req, res) => {
-    
-    return createCategoryController().handle(req,res);
-})
+const createCategoryController = new CreateCategoryController()
+const importCategoryController = new ImportCategoryController()
+const listCategoriesControllers = new ListCategoriesController()
 
-categoriesRoutes.get("/", (req, res) => {
-    return listCategoriesControllers.handle(req, res);
-})
+categoriesRoutes.post("/", createCategoryController.handle)
 
-categoriesRoutes.post("/import",upload.single("file"), (req, res) => {
-  return importCategoryController.handle(req,res)
-})
+categoriesRoutes.get("/", listCategoriesControllers.handle)
+
+categoriesRoutes.post("/import",upload.single("file"), importCategoryController.handle)
 
 
 export {categoriesRoutes}
