# src/routes/specifications.routes.ts
@@ -1,16 +1,17 @@
 import { request, Router } from "express";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
 
 
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
+
 
 const specificationsRoutes= Router();
 
+const createSpecificationController = new CreateSpecificationController()
 
 
 
-specificationsRoutes.post("/", (req, res) => {
-    return createSpecificationController.handle(req,res)
-})
+
+specificationsRoutes.post("/", createSpecificationController.handle)
 
 
 export{specificationsRoutes}
