# src/swagger.json
@@ -1,35 +1,34 @@
 {
     "openapi": "3.0.0",
-
-    "info" :{
+    "info": {
         "title": "RentalX Documentation",
-        "version":"1.0.0",
+        "version": "1.0.0",
         "contact": {
-            "email":"juan_ormelli@hotmail.com"
+            "email": "juan_ormelli@hotmail.com"
         }
     },
-    "paths":{
-        "/categories":{
+    "paths": {
+        "/categories": {
             "post": {
-                "tags":["Category"],
-                "summary":"Create category",
-                "description":"Create a new category",
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Create category",
+                "description": "Create a new category",
                 "requestBody": {
-                    "content":{
-                        "application/json":{
-                            "schema":{
+                    "content": {
+                        "application/json": {
+                            "schema": {
                                 "type": "object",
                                 "properties": {
                                     "name": {
-                                        
-                                        "type":"string"
+                                        "type": "string"
                                     },
                                     "description": {
-                                        "type":"string"
+                                        "type": "string"
                                     }
-
                                 },
-                                "example":{
+                                "example": {
                                     "name": "Category name Sample",
                                     "description": "Category Description Sample"
                                 }
@@ -37,43 +36,111 @@
                         }
                     }
                 },
-                "responses":{
-                    "201" :{
-                        "description":"Created"
+                "responses": {
+                    "201": {
+                        "description": "Created"
                     },
-                    "500":{
-                        "description":"Category Already exists"
+                    "500": {
+                        "description": "Category Already exists"
                     }
                 }
             },
-            "get":{
-                "tags":["Category"],
-                "summary":"List all categories",
-                "description":"List all categories",
-                "responses":{
-                    "200":{
-                        "description":"Success",
-                        "content":{
-                            "application/json":{
-                                "type":"array",
-                                "items":{
-                                    "type":"object",
-                                    "properties":{
-                                        "name":{
-                                            "type":"string"
+            "get": {
+                "tags": [
+                    "Category"
+                ],
+                "summary": "List all categories",
+                "description": "List all categories",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "type": "array",
+                                "items": {
+                                    "type": "object",
+                                    "properties": {
+                                        "name": {
+                                            "type": "string"
                                         },
-                                        "description":{
-                                            "type":"string"
+                                        "description": {
+                                            "type": "string"
                                         }
                                     }
                                 }
                             }
                         }
                     }
-
+                }
+            }
+        },
+        "/categories/import":{
+            "post": {
+                "tags": [
+                    "Category"
+                ],
+                "summary":"Upload Category",
+                "description": "Upload Category",
+                "requestBody":{
+                    "content":{
+                        "multipart/form-data":{
+                            "schema":{
+                                "type":"object",
+                                "properties":{
+                                    "file":{
+                                        "type":"string",
+                                        "format":"binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "201":{
+                        "description":"Created"
+                    }
+                }
+            }
+        },
+        "/specifications": {
+            "post": {
+                "tags": [
+                    "Specifications"
+                ],
+                "summary": "Create Specification",
+                "description": "Create new Specification",
+                "requestBody": {
+                    "content": {
+                        "application/json":{
+                            "schema": {
+                                "$ref": "#/definitions/Specifications"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Success"
+                    },
+                    "500": {
+                        "description": "specifications already exists"
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "Specifications": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
                 }
             }
         }
     }
-
 }
